tests/parse_print/heuristic/heuristic_magic/stderr.expected
Error:
    tests/parse_print/heuristic/heuristic_magic/heuristic_magic.essence:5:11:
  |
5 | heuristic magic
  |           ^^^^^
Error: Invalid heuristic magic Expected one of: ["static","sdf","conflict","srf","ldf","wdeg","domoverwdeg"]
